fix: link z-index

--- a/apps/logo-quiz/src/styles.scss
+++ b/apps/logo-quiz/src/styles.scss
@@ -69,7 +69,7 @@ button {
 .body-inner {
   position: relative;
   height: 100%;
-  
+
   &__circles {
     height: 100%;
     overflow: hidden;
@@ -87,7 +87,7 @@ button {
     opacity: 0.75;
     margin-top: 15px;
     position: relative;
-    z-index: 3;
+    z-index: 1;
 
     &, a {
       color: white;
